--- a/README.Rmd
+++ b/README.Rmd
@@ -19,12 +19,12 @@ R package for Forest Management Geodatabase reporting.
 
 ## Description
 
-<img src="man/figures/r_logo.png" width=125 align="left"  />
+<img src="man/figures/r_logo.png" width=75 align="left"  />
 
 The `fmgr` R package contains functions for producing standard reporting products from the Forest Management Geodatabase (FMG).  
 
 
-<img src="man/figures/HDQLO-03_h120.jpg" align="right" />
+<img src="man/figures/HDQLO-03_h120.jpg" width=125 align="right" />
 
 ## Funding
 Funding for the development and maintenance of the Forest Management Geodatabase (FMG) has been provided by: 
